--- a/js/tipos_de_dasos/index.html
+++ b/js/tipos_de_dasos/index.html
@@ -17,47 +17,48 @@
       <h1>Tipos de dados</h1>
     </header>
 
-    <main>
-      <h2>Tipos primitivos</h2>
-      <ol>
-        <li>
-          Number: Tipo numérico tradicional, inclui inteiros e números com
-          vírgula (floats)
-        </li>
-        <li>
-          BigInt: Tipo usado para representar números inteiros muito grandes
-        </li>
-        <li>
-          String: Tipo textual, deve estar entre aspas. Pode ser acessado como
-          uma lista de caracteres
-        </li>
-        <li>Boolean: Tipo lógico, possui apenas dois valores: true ou false</li>
-        <li>Null: Valor nulo, representa um valor vazio</li>
-        <li>
-          Undefined: Valor não definido, quando algo não teve um valor atribuído
-        </li>
-      </ol>
+    
 
-      <h2>Outros tipos importantes</h2>
+    <div class="section">
+      <h2>Descrição</h2>
+      <p>
+        Este exercício explora os principais tipos de dados em JavaScript, tanto
+        primitivos quanto complexos, essenciais para manipulação de informações.
+      </p>
+    </div>
+
+    <div class="section">
+      <h2>Tipos Primitivos</h2>
       <ul>
-        <li>
-          Objeto: Estrutura que armazena múltiplos valores, como o próprio
-          console
-        </li>
-        <li>
-          Função: Trechos de código que executam tarefas, como o console.error
-        </li>
+        <li><strong>Number:</strong> Inclui números inteiros e decimais (floats).</li>
+        <li><strong>BigInt:</strong> Para representar números inteiros muito grandes.</li>
+        <li><strong>String:</strong> Texto delimitado por aspas, pode ser acessado como um array de caracteres.</li>
+        <li><strong>Boolean:</strong> Tipo lógico com dois valores: <em>true</em> ou <em>false</em>.</li>
+        <li><strong>Null:</strong> Representa um valor nulo, ou "vazio".</li>
+        <li><strong>Undefined:</strong> Valor não definido, para variáveis sem valor atribuído.</li>
       </ul>
+    </div>
 
-      <h2>São abordados detalhes como:</h2>
-      <p>Diferença entre números inteiros e floats</p>
-      <p>Como representar números muito grandes com BigInt</p>
-      <p>Necessidade de usar aspas para Strings</p>
-      <p>Valores booleanos, true e false</p>
-      <p>Diferença entre Null e Undefined</p>
-      <p>Objetos como estruturas complexas no JavaScript</p>
-      <p>Funções que executam tarefas no código</p>
-    </main>
+    <div class="section">
+      <h2>Outros Tipos Importantes</h2>
+      <ul>
+        <li><strong>Objeto:</strong> Estrutura que agrupa múltiplos valores, como o objeto <em>console</em>.</li>
+        <li><strong>Função:</strong> Blocos de código que realizam tarefas específicas, como o <em>console.error()</em>.</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>Pontos de Estudo</h2>
+      <ul>
+        <li>Diferença entre números inteiros e floats.</li>
+        <li>Como usar BigInt para representar números grandes.</li>
+        <li>Regras de uso para Strings (aspas).</li>
+        <li>Definição e uso de valores booleanos.</li>
+        <li>Diferença entre Null e Undefined.</li>
+        <li>Uso de objetos como estruturas complexas.</li>
+        <li>Funções como métodos que realizam operações no código.</li>
+      </ul>
+    </div>
 
     <footer>
       <p>Explicação da primeira aula de JavaScript</p>
