feat: The initial class on function has been added

--- a/js/condicionais/switch/index.html
+++ b/js/condicionais/switch/index.html
@@ -11,11 +11,11 @@
       <nav>
         <a class="nav_pages"
           href="/js/exercicios/exercicio-2/p2-calculo_de_dano.html"
-          >Exercício 2: p2-calculo_de_dano.</a
+          >Exercício 4: Calculo de dano.</a
         >
         <a class="nav_pages" href="/">Central de aulas</a>
         <a class="nav_pages" href="/js/exercicios/exercicio-3/conversor.html"
-          >Exercício 3: Conversor de medidas.</a
+          >Exercício 5: Conversor de medidas.</a
         >
       </nav>
       <h1>Estruturas Condicionais: Switch</h1>
