--- a/js/estruturas-de-dados/array_bidimensionais-matrizes/index.html
+++ b/js/estruturas-de-dados/array_bidimensionais-matrizes/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,7 +10,7 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/exercicios/exercicio-7/pilha_de_cartas.html"
-          >Exercício 7: Pilha de Cartas</a
+          >Exercício 12: Pilha de Cartas</a
         >
         <a class="nav_pages" href="/">Central de aulas</a>
         <a class="nav_pages" href="/js/estruturas-de-dados/objetos/index.html"
