--- a/js/exercicios/exercicio-3/conversor.html
+++ b/js/exercicios/exercicio-3/conversor.html
@@ -10,7 +10,7 @@
     <header>
       <nav>
         <a class="nav_pages" href="/js/condicionais/switch/index.html"
-          >Exercício 2: Estruturas Condicionais: Switch.</a
+          >aula anterior: Estruturas Condicionais: Switch.</a
         >
         <a class="nav_pages" href="/">Central de aulas</a>
         <a class="nav_pages" href="/js/estruturas_de_repetição/while/index.html"
