--- a/js/exercicios/exercicio-5/menu_interativo.html
+++ b/js/exercicios/exercicio-5/menu_interativo.html
@@ -18,10 +18,10 @@
         <a
           class="nav_pages"
           href="/js/exercicios/exercicio-5/controle_financeiro.html"
-          >Exercício 7: Controle Financeiro.</a
+          >Exercício 8: Controle Financeiro.</a
         >
       </nav>
-      <h1>Menu Interativo</h1>
+      <h1>Exercício 7: Menu Interativo</h1>
     </header>
 
     <div class="section">
