--- a/js/exercicios/exercicio-8/cadastro_de_imoveis.html
+++ b/js/exercicios/exercicio-8/cadastro_de_imoveis.html
@@ -13,7 +13,7 @@
           >Aula anterior: Objetos no JavaScript</a
         >
         <a class="nav_pages" href="/">Central de aulas</a>
-        <a class="nav_pages" href="/js/">Próxima aula</a>
+        <a class="nav_pages" href="/js/funcao/index.html">Próxima aula: Funções no JavaScript</a>
       </nav>
       <h1>Exercício 13: Cadastro de imóveis</h1>
     </header>
