--- a/js/exercicios/exercicio-2/p2-calculo_de_dano.html
+++ b/js/exercicios/exercicio-2/p2-calculo_de_dano.html
@@ -12,7 +12,7 @@
         <a
           class="nav_pages"
           href="/js/exercicios/exercicio-2/p1-teste_de_velocidade.html"
-          >Exercício 2: p1-teste_de_velocidade.</a
+          >Exercício 3: Teste de velocidade.</a
         >
         <a class="nav_pages" href="/">Central de aulas</a>
         <a class="nav_pages" href="/js/condicionais/switch/index.html"
