--- a/js/funcao/index.html
+++ b/js/funcao/index.html
@@ -11,7 +11,7 @@
         <nav>
           <a class="nav_pages" href="/js/exercicios/exercicio-8/cadastro_de_imoveis.html">Exercício 13: Cadastro de imóveis</a>
           <a class="nav_pages" href="/">Central de aulas</a>
-          <a class="nav_pages" href="/js/">Próxima aula</a>
+          <a class="nav_pages" href="/js/funcao/parametros_em_Funcoes/index.html">Próxima aula: Parâmetros de uma função</a>
         </nav>
         <h1>Funções no JavaScript</h1>
     </header>
