feat: Added a lesson on returning a function

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                 <a href="/js/funcao/retorno_da_funcao/index.html">Aula 19: Retorno de uma função.</a>
               </li>
               <li>
-                <a href="/js/">Aula 20: .</a>
+                <a href="/js/escopo/index.html">Aula 20: Escopo.</a>
               </li>
               <li>
                 <a href="/js/">Aula 21: .</a>
