feat: JavaScript Scope lesson added

--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                 >
               </li>
               <li>
-                <a href="/js/exercicios/exercicio-">Exercício 14: .</a>
+                <a href="/js/exercicios/exercicio-14/calculadora_geométrica.html">Exercício 14: Calculadora Geométrica.</a>
               </li>
               <li>
                 <a href="/js/exercicios/exercicio-">Exercício 15: .</a>
